--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -98,7 +98,7 @@
 	}
 	a.sentence-link {
 		color: rgba(255,255,255, 1);
-		border-bottom: 1px solid $white;
+		border-bottom: 1px solid rgba(255,255,255, 0.7);
 		&:hover {
 			color: $black;
 			background-color: $yellow;
