--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -571,7 +571,7 @@ span.menu.icon {
 }
 
 
-// =========== General button styles & variables =======================================//
+// =========== General button styles & variables ==================
 #menu-toggle {
   display:inline-block;
   margin: 0;
@@ -586,7 +586,7 @@ span.menu.icon {
 $color : $yellow;
 $transition: .3s;// increase this to see the transformations happen in slow motion
 
-/* ====================== lines button ==================================================*/
+/* ====================== lines button =======================*/
 
 $button-size : 1.5rem; 
 //common to all three-liners
