Update: type tweak for blockquote in bigcopy

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -163,7 +163,7 @@ span.hanging-q {
 	    content: '“';
 	    position: absolute;
 	    margin-left: -0.6em;
-	    font-size: modular-scale(0, 1.6rem);
+	    // font-size: modular-scale(0, 1.6rem);
 	}
 
 	&:after {
