--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -1,3 +1,5 @@
+// Contact Map
+
 #contact-map {
 	width: 100%;
 	min-height: 80vh;
@@ -11,6 +13,12 @@
 		padding: 20px;
 	}
 }
+
+// Moving Section
+
+
+
+// Contact Columns
 
 .contact-container {
 	position: relative;
