--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -32,8 +32,12 @@
 		min-height: 300px;
 	}
 	h3 {
-		margin-bottom: 15px;
+		// margin-bottom: 15px;
 		font-family: $main-headings;
+	}
+	h6 {
+		margin-top: 0;
+		margin-bottom: 15px;
 	}
 	p {
 		margin-bottom: 0;
