--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -22,6 +22,7 @@
 	// border-top: 1px solid black;
 	// border-bottom: 1px solid black;
 	// padding: 0 10%;
+	z-index: 20;
 	@include display(flex);
 	@include align-items(center);
 	@include justify-content(center);
@@ -43,6 +44,7 @@
 		margin-bottom: 0;
 	}
 	&:after {
+		z-index: -1;
 		content:"";
 		position: absolute;
 		left: 50%;
@@ -54,7 +56,7 @@
 		border-bottom:25px solid transparent;
 		@include media($bp-small) {
 			left: 42%;
-			top: 190px;
+			top: 210px;
 			transform: rotate(90deg);
 			border-top:60px solid transparent;
 			border-left: 50px solid $yellow; // how far out the point goes
@@ -73,6 +75,10 @@
 	}
 }
 
+#move-map {
+	z-index: -2;
+}
+
 .contact-moving__half {
 	position: relative;
 	height: 100%;
@@ -87,7 +93,7 @@
 	padding: 0 0 0 10%;
 	@include media($bp-small) {
 		padding: 30px;
-		height: 240px;
+		height: 260px;
 	}
 	p {
 		font-family: $lite-headings;
