--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -55,7 +55,7 @@
 		border-bottom:25px solid transparent;
 		@include media($bp-small) {
 			left: 42%;
-			top: 210px;
+			top: 225px;
 			transform: rotate(90deg);
 			border-top:60px solid transparent;
 			border-left: 50px solid $yellow; // how far out the point goes
@@ -92,7 +92,7 @@
 	padding: 0 0 0 10%;
 	@include media($bp-small) {
 		padding: 30px;
-		height: 270px;
+		min-height: 270px;
 	}
 	p {
 		font-family: $lite-headings;
