--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -138,9 +138,14 @@
 	width: 120%;
 	height: 450px;
 	margin: 25px -10%;
+	// to prevent video from scrolling on mobile
+	-webkit-overflow-scrolling: touch;
+	overflow-y: scroll;
 	@include media($bp-small) {
 		height: 300px;
 		margin: 25px -10%;
+		-webkit-overflow-scrolling: touch;
+		overflow-y: scroll;
 	}
 	@include media($bp-med) {
 		height: 400px;
