--- a/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
@@ -16,10 +16,14 @@ $bp-xlarge: new-breakpoint(min-width 81em 12);
 $bp-large: new-breakpoint(min-width 50em 12);
 $bp-med: new-breakpoint(min-width 30em max-width 50em 12);
 $bp-small: new-breakpoint(max-width 30em 5);
+$bp-xsmall: new-breakpoint(max-width 20em 5);
 
 // Landscape
 $mobile-landscape: new-breakpoint(max-height $mobile-landscape orientation landscape 2);
 $tablet-landscape: new-breakpoint(max-height $tab-hmax max-width $tab-wmax orientation landscape 12);
+
+// NOTE: put mobile-landscape and xsmall below all others, or they'll be
+	// over written
 
 // Home Page 
 $home-one: new-breakpoint(min-width 1367px max-width 94em 12);
