--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -119,8 +119,8 @@ h2.rw-sentence{
 	// width: 100%;
 	@include media($bp-small) {
 		margin: 0 0 0 5px;
-		font-size: modular-scale(2, 1.4rem); 
-		line-height: modular-scale(2, 1.7rem); 
+		font-size: modular-scale(3, 1.3rem); 
+		line-height: modular-scale(3, 1.6rem); 
 	}
 	@include media($bp-med) {
 		text-align: left;
@@ -150,6 +150,11 @@ h2.rw-sentence{
 		margin: 0 10%;
 		font-size: modular-scale(2, 1.3rem); 
 		line-height: modular-scale(2, 1.4rem); 
+	}
+	@include media($bp-xsmall) {
+		margin: 0 0 0 5px;
+		font-size: modular-scale(2, 1.4rem); 
+		line-height: modular-scale(2, 1.7rem); 
 	}
 }
 
