--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -99,6 +99,9 @@
 	a.sentence-link {
 		color: rgba(255,255,255, 1);
 		border-bottom: 1px solid rgba(255,255,255, 0.3);
+		@include media($bp-small) {
+			border-bottom: 1px solid rgba(255,255,255, 0.8);
+		}
 		&:hover {
 			color: $black;
 			background-color: $yellow;
@@ -153,8 +156,8 @@ h2.rw-sentence{
 	}
 	@include media($bp-xsmall) {
 		margin: 0 0 0 5px;
-		font-size: modular-scale(2, 1.3rem); 
-		line-height: modular-scale(2, 1.6rem); 
+		font-size: modular-scale(2, 1.2rem); 
+		line-height: modular-scale(2, 1.5rem); 
 	}
 }
 
@@ -229,6 +232,7 @@ div.rw-words.rw-words-1 {
 		bottom: -55px;
 		padding: 0;
 		line-height: modular-scale(2, 1.7rem); 
+		border-bottom: 1px solid rgba(252, 216, 56, 0.8);
 	}
 	@include media($bp-med) {
 		left: -20px;
