--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -19,9 +19,6 @@
 .contact-moving {
 	position: relative;
 	background-color: $yellow;
-	// border-top: 1px solid black;
-	// border-bottom: 1px solid black;
-	// padding: 0 10%;
 	z-index: 28;
 	@include display(flex);
 	@include align-items(center);
@@ -33,12 +30,12 @@
 		min-height: 300px;
 	}
 	h3 {
-		// margin-bottom: 15px;
 		font-family: $main-headings;
 	}
 	h6 {
 		margin-top: 0;
 		margin-bottom: 15px;
+		text-transform: uppercase;
 	}
 	p {
 		margin-bottom: 0;
@@ -95,6 +92,8 @@
 	}
 	p {
 		font-family: $lite-headings;
+		font-size: modular-scale(0);
+		line-height: modular-scale(0);
 	}
 	p:last-child {
 		// padding-left: 10px;
