Update: flexboxcenter mixin

--- a/custom/themes/ingenuity/src/sass/components/_buttons.scss
+++ b/custom/themes/ingenuity/src/sass/components/_buttons.scss
@@ -49,9 +49,7 @@
   padding: 5px;
   margin-left: -45%;
   z-index: 10;
-  @include display(flex);
-  @include align-items(center);
-  @include justify-content(center);
+  @include flexboxcenter;
   @include media($bp-small) {
     height: 60px
   }
