--- a/custom/themes/ingenuity/src/sass/layout/_contact.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_contact.scss
@@ -20,9 +20,7 @@
 	position: relative;
 	background-color: $yellow;
 	z-index: 28;
-	@include display(flex);
-	@include align-items(center);
-	@include justify-content(center);
+	@include flexboxcenter;
 	@include media($bp-small) {
 		@include flex-direction(column);
 	}
