--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -3,9 +3,7 @@
 	width: 100%;
 	// margin-top: 50px;
 	position: relative;
-	@include display(flex);
-	@include align-items(center);
-	@include justify-content(center);
+	@include flexboxcenter;
 	@include flex-direction(column);	
 }
 
@@ -64,9 +62,7 @@
 	filter: brightness(80%);
 	filter: grayscale(80%);
 	background-blend-mode: hard-light;
-	@include display(flex);
-	@include align-items(center);
-	@include justify-content(center);
+	@include flexboxcenter;
 	z-index: 29;
 	}
 }
@@ -106,9 +102,7 @@
 .js-video {
 	width: 100%;
 	height: auto;
-	@include display(flex);
-	@include align-items(center);
-	@include justify-content(center);
+	@include flexboxcenter;
 	iframe {
 		width: 100%;
 		min-height: 600px;
@@ -189,9 +183,7 @@
 	text-align:center;
 	// line-height:40px;
 	border: 2px solid $black;
-	@include display(flex);
-	@include align-items(center);
-	@include justify-content(center);
+	@include flexboxcenter;
 	@include media($bp-med) {
 		width: 200px;
 		height: 80px;
