--- a/custom/themes/ingenuity/src/sass/layout/_services.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_services.scss
@@ -1,8 +1,6 @@
 .two-column {
 	margin: 60px -25% 60px -20%;
-	@include display(flex);
-	@include align-items(flex-start);
-	@include justify-content(center);
+	@include flexalignstart;
 	@include flex-direction(column);
 	@include media($bp-small) {
 		margin: 40px -5%;
