--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -1,9 +1,7 @@
 .team__container {
 	position: relative;
 	padding: 0;
-	@include display(flex);
-	@include align-items(flex-start);
-	@include justify-content(center);
+	@include flexalignstart;
 	@include flex-direction(column);
 	.team__single {
 		background-color: $yellow;
@@ -13,9 +11,7 @@
 		// margin-bottom: 25px;
 		// transition: all 0.5s;
 		border-bottom: 2px solid $black;
-		@include display(flex);
-		@include align-items(flex-start);
-		@include justify-content(center);
+		@include flexalignstart;
 		@include flex-direction(column);
 		@include media($bp-large) {
 			min-height: 300px;
