--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -22,7 +22,7 @@
 	background-position: center center;
 	background-size: cover;
 	@include flexboxcenter;
-	hgroup {
+	.hgroup {
 		width: 100%;
 		@include display(flex);
 		@include flex-direction(column);
@@ -31,7 +31,7 @@
 
 .home-hero {
 	min-height: 100vh;
-	hgroup {
+	.hgroup {
 		margin-top: 150px; //newnav!
 		@include media($bp-small) {
 			margin-top: 5%;
@@ -73,7 +73,7 @@
 		filter: grayscale(80%) brightness(0.6) opacity(1);
 		z-index: 50;
 	}
-	hgroup {
+	.hgroup {
 		position: relative;
 		z-index: 51;
 		margin-top: 150px;
@@ -99,7 +99,7 @@
 }
 
 .default-hero.project-index {
-	hgroup {
+	.hgroup {
 		margin: 50px auto 0;
 		h1,
 		h2 {
