--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -543,6 +543,11 @@ main {
     }
 }
 
+//category label
+#left p.sidebar-cats {
+	margin-bottom: 0;
+}
+
 
 // CTAs =============================
 
