--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -240,7 +240,7 @@ div.rw-words.rw-words-1 {
 	}
 	@include media($bp-large) {
 		bottom: -100px;
-		bottom: 0;
+		bottom: 8px;
 		left: -20px; 
 		line-height: modular-scale(5, 1.5rem); 
 	}
