--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .main-wrapper {
-	overflow-x: hidden;
+	// overflow-x: hidden;
 	@include outer-container;
 	@include media($bp-small) {
 		padding: 0 30px;
@@ -144,6 +144,7 @@ nav.main-nav {
   height: 500px;
   img {
   	width: 100%;
+  	height: auto;
   	overflow: hidden;
   	// margin: 25px 0;
   	margin: 0 auto;
